# envsense

./: .env  .env.local  .gitignore  README.md  docker-compose.yml  nx.json  package-lock.json  package.json
apps/envsense/: jest.config.ts  next.config.js  project.json  tsconfig.json
apps/envsense-be/: .gitignore  Cargo.toml
apps/envsense-be/migrations/: 1_.sql  2_.sql  3_.sql
apps/envsense-be/src/: main.rs
apps/envsense-be/src/config/: mod.rs
apps/envsense-be/src/controllers/: audit_log.rs  auth.rs  device.rs  mod.rs  report.rs
apps/envsense-be/src/middlewares/: auth_middleware.rs
apps/envsense-be/src/models/: audit_log.rs  device.rs  device_log.rs  location.rs  mod.rs  report.rs  sub_location.rs  user.rs
apps/envsense-be/src/routes/: audit_log.rs  auth.rs  device.rs  report.rs
apps/envsense-be/src/utils/: db.rs  jwt.rs
apps/envsense-e2e/: playwright.config.ts  project.json
apps/envsense/src/app/: global.css  layout.tsx  middleware.ts  page.tsx
apps/envsense/src/app/(auth)/login/: page.tsx
apps/envsense/src/app/(dashboard)/: layout.tsx
apps/envsense/src/app/(pages)/: layout.tsx
apps/envsense/src/app/addHardwareDevice/: page.tsx
apps/envsense/src/app/components/: AlertCards.tsx  Card.tsx  CardwithLinks.tsx  ChannelCard.tsx  DatalogCard.tsx  DropdownMenu.tsx  LoadingSpinner.tsx  MainCard.tsx  Menu.tsx  Navbar.tsx  OutOfRangeChannelCard.tsx  SmallCard.tsx  newlocation.tsx
apps/envsense/src/app/devices/: dataloggerform.tsx  linegraph.tsx
apps/envsense/src/app/locations/: city.tsx  floorplan.tsx  monitoring.tsx  page.tsx  pointstable.tsx
(+59 files in other folders)
