[package]
name = "envsense-be"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
bcrypt = "0.16.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "time"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3", features = ["serde"] }